@@ -722,3 +722,5 @@ globalmanager.download.remove.veto=Removal Action Vetoed
 plugin.sharing.download.remove.veto=This download is the result of a resource being shared.\nTo remove the download remove the associated share
 ConfigView.section.tracker.main=Main
 ConfigView.section.tracker.web=Web
+ConfigView.label.prioritizefirstpiece=Prioritize first piece of file(s)
+ConfigView.label.prioritizefirstpiece.tooltip=Attempts to download the very beginning of a file first.\nFor support of early previewing.
